# watch_dog

./: .gitignore  README.md  RELEASING.md  package.json
.github/workflows/: ci.yml  release.yml
engine/: .gitignore  Cargo.toml  log_2024-12-28_15-21-23.json  log_2024-12-28_18-08-09.json
engine/app_linux/: engine
engine/linux_app/: engine
engine/logs/: log_2024-12-28_15-04-16.json
engine/src/: demo_system.rs  helpers.rs  logger.rs  main.rs  non_demo_main.rs  send_log_data.rs  system_info.rs  system_stats.rs  temperatures.rs
engine/src/docker_mon/: mod.rs  send_containers.rs  stream_container.rs
front_panel/: index.html  package-lock.json  package.json  script.js  server.js  webpack.config.js
front_panel/public/: control_window_style.css  index.html  style.css
front_panel/public/css/: chart_style.css  control_window_style.css  deco.css  portals.css  style.css
front_panel/public/css_wd/: style_wd.css
front_panel/public/gauges/: gauge.min.js
front_panel/src/: button.js  init.js  label.js  main.js  script.js  server.js
front_panel/src/boot/: boot_sequence.js
front_panel/src/button_functions/: button_functions.js
front_panel/src/chart/: chart.js
logs/: cnr_log_2024-12-30_09-33-44.json  cnr_log_2024-12-30_12-34-22.json  cnr_log_2024-12-30_14-22-42.json  cnr_log_2025-01-18_18-17-19.json  cnr_log_2025-01-20_13-25-11.json  net_log_2024-12-30_09-33-44.json  net_log_2024-12-30_12-34-22.json  net_log_2024-12-30_14-22-42.json  net_log_2025-01-18_18-17-19.json  net_log_2025-01-20_13-25-11.json
scripts/: compute_version.sh
(+33 files in other folders)
