[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.32.0"
clearscreen = "3.0.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0 ", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
